Duplicating geometry nodes modifier causes Blender to crash #92499

Closed
opened 2021-10-26 14:48:37 +02:00 by Jim Hart · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-24 18:24, hash: 3e75f70acd
Worked: (newest version of Blender that worked as expected)

Short description of error
Was working to create a "Sierpinski Sponge" which uses iterative geometry nodes. I set up a level 1 sponge, but when I went to duplicate the geo node modifier, Blender crashes.

Exact steps for others to reproduce the error
The following simplified steps still causes Blender to crash:

#92499.blend
In Modifiers tab, for Geo Node modifier, click drop down and select "Duplicate"

Blender crashes.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-24 18:24, hash: `3e75f70acd` Worked: (newest version of Blender that worked as expected) **Short description of error** Was working to create a "Sierpinski Sponge" which uses iterative geometry nodes. I set up a level 1 sponge, but when I went to duplicate the geo node modifier, Blender crashes. **Exact steps for others to reproduce the error** The following simplified steps still causes Blender to crash: [#92499.blend](https://archive.blender.org/developer/F11536241/T92499.blend) In Modifiers tab, for Geo Node modifier, click drop down and select "Duplicate" Blender crashes.
Author

Added subscriber: @JimDHart

Added subscriber: @JimDHart

#92544 was marked as duplicate of this issue

#92544 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Can confirm crash.

>	blender.exe!_BLI_assert_abort() Line 62	C

 	blender.exe!blender::Array<blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,8,blender::GuardedAllocator>::operator[](__int64 index) Line 219	C++
 	blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::lookup_slot_ptr<enum GeometryComponentType>(const GeometryComponentType & key, const unsigned __int64 hash) Line 1203	C++
 	blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::lookup_slot_ptr<enum GeometryComponentType>(const GeometryComponentType & key, const unsigned __int64 hash) Line 1217	C++
 	blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::remove_as<enum GeometryComponentType>(const GeometryComponentType & key) Line 343	C++
 	blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::remove(const GeometryComponentType & key) Line 340	C++
 	blender.exe!GeometrySet::remove(const GeometryComponentType component_type) Line 173	C++
 	blender.exe!blender::nodes::geo_node_instance_on_points_exec::__l2::<lambda>(GeometrySet & geometry_set) Line 185	C++
 	blender.exe!blender::FunctionRef<void __cdecl(GeometrySet &)>::callback_fn<void <lambda>(GeometrySet &)>(__int64 callable, GeometrySet & <params_0>) Line 108	C++
 	blender.exe!blender::FunctionRef<void __cdecl(GeometrySet &)>::operator()(GeometrySet & <params_0>) Line 145	C++
 	blender.exe!GeometrySet::modify_geometry_sets::__l2::<lambda>(GeometrySet * geometry_set) Line 559	C++
 	blender.exe!tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>::operator()(tbb::blocked_range<GeometrySet * *> range) Line 52	C++
 	blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>::run_body(tbb::blocked_range<GeometrySet * *> & r) Line 116	C++
 	blender.exe!tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type>>::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>,tbb::blocked_range<GeometrySet * *>>(tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const> & start, tbb::blocked_range<GeometrySet * *> & range) Line 424	C++
 	blender.exe!tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>,tbb::blocked_range<GeometrySet * *>>(tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const> & start, tbb::blocked_range<GeometrySet * *> & range) Line 257	C++
 	blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>::execute() Line 143	C++
 	[External Code]	
Can confirm crash. ``` > blender.exe!_BLI_assert_abort() Line 62 C blender.exe!blender::Array<blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,8,blender::GuardedAllocator>::operator[](__int64 index) Line 219 C++ blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::lookup_slot_ptr<enum GeometryComponentType>(const GeometryComponentType & key, const unsigned __int64 hash) Line 1203 C++ blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::lookup_slot_ptr<enum GeometryComponentType>(const GeometryComponentType & key, const unsigned __int64 hash) Line 1217 C++ blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::remove_as<enum GeometryComponentType>(const GeometryComponentType & key) Line 343 C++ blender.exe!blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<enum GeometryComponentType>,blender::DefaultEquality,blender::SimpleMapSlot<enum GeometryComponentType,blender::UserCounter<GeometryComponent>>,blender::GuardedAllocator>::remove(const GeometryComponentType & key) Line 340 C++ blender.exe!GeometrySet::remove(const GeometryComponentType component_type) Line 173 C++ blender.exe!blender::nodes::geo_node_instance_on_points_exec::__l2::<lambda>(GeometrySet & geometry_set) Line 185 C++ blender.exe!blender::FunctionRef<void __cdecl(GeometrySet &)>::callback_fn<void <lambda>(GeometrySet &)>(__int64 callable, GeometrySet & <params_0>) Line 108 C++ blender.exe!blender::FunctionRef<void __cdecl(GeometrySet &)>::operator()(GeometrySet & <params_0>) Line 145 C++ blender.exe!GeometrySet::modify_geometry_sets::__l2::<lambda>(GeometrySet * geometry_set) Line 559 C++ blender.exe!tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>::operator()(tbb::blocked_range<GeometrySet * *> range) Line 52 C++ blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>::run_body(tbb::blocked_range<GeometrySet * *> & r) Line 116 C++ blender.exe!tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type>>::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>,tbb::blocked_range<GeometrySet * *>>(tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const> & start, tbb::blocked_range<GeometrySet * *> & range) Line 424 C++ blender.exe!tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>,tbb::blocked_range<GeometrySet * *>>(tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const> & start, tbb::blocked_range<GeometrySet * *> & range) Line 257 C++ blender.exe!tbb::interface9::internal::start_for<tbb::blocked_range<GeometrySet * *>,tbb::internal::parallel_for_each_body_for<void <lambda>(GeometrySet *),GeometrySet * *>,tbb::auto_partitioner const>::execute() Line 143 C++ [External Code] ```

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Walnert

Added subscriber: @Walnert
Member

Added subscribers: @gjowen2255, @PratikPB2123

Added subscribers: @gjowen2255, @PratikPB2123

This issue was referenced by 7c860ab9d4

This issue was referenced by 7c860ab9d4b54f9c394d3c2769927f55c6737b5f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-10-29 10:30:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92499
No description provided.